--- a/market_postgres/docker-compose.yaml
+++ b/market_postgres/docker-compose.yaml
@@ -20,10 +20,14 @@ services:
     depends_on:
       - db
 
+#  backend:
+#    build: ../skymarket/.
+#    depends_on:
+#      - db
+
   nginx:
     image: nginx:1.19.3
     ports:
-      - "8000:8000"
       - "3000:3000"
     volumes:
       - ../skymarket/django_static/:/usr/share/nginx/html/django_static/
